--- a/app/src/main/res/layout/list_element_client.xml
+++ b/app/src/main/res/layout/list_element_client.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/card"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="90dp"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="5dp">
+    android:padding="10dp">
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Nombre Apellido" />
@@ -19,13 +20,12 @@
             android:id="@+id/tv_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Email" />
         <TextView
             android:id="@+id/tv_phone_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_marginBottom="10dp"
             android:text="Telefono" />
 
 </LinearLayout>
