--- a/app/src/main/res/layout/fragment_create_client.xml
+++ b/app/src/main/res/layout/fragment_create_client.xml
@@ -7,7 +7,7 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tv_client_form_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
